<?xml version="1.0"?>
<package format="3">
  <name>franka_gripper</name>
  <version>0.8.0</version>
  <description>This package implements the franka gripper of type Franka Hand for the use in ros</description>
  <maintainer email="support@franka.de">Franka Emika GmbH</maintainer>
  <license>Apache 2.0</license>

  <url type="repository">https://github.com/suneelbelkhale/franka_ros2</url>
  <url type="bugtracker">https://github.com/suneelbelkhale/franka_ros2/issues</url>
  <author>Franka Emika GmbH</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>libfranka</depend>
  <depend>control_msgs</depend>
  <depend>actionlib</depend>
  <depend>sensor_msgs</depend>
  <depend>xmlrpcpp</depend>
  <depend>actionlib_msgs</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

</package>
