<?xml version="1.0"?>
<package format="3">
  <name>franka_hw</name>
  <version>0.8.0</version>
  <description>franka_hw provides hardware interfaces for using Franka Emika research robots with ros_control</description>
  <maintainer email="support@franka.de">Franka Emika GmbH</maintainer>
  <license>Apache 2.0</license>

  <url type="repository">https://github.com/suneelbelkhale/franka_ros2</url>
  <url type="bugtracker">https://github.com/suneelbelkhale/franka_ros2/issues</url>
  <author>Franka Emika GmbH</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>controller_interface</depend>
  <depend>combined_robot_hw</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>libfranka</depend>
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>urdf</depend>
  <depend>pluginlib</depend>
  <depend>franka_msgs</depend>

  <test_depend>franka_description</test_depend>
  <test_depend>gtest</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
      <hardware_interface plugin="${prefix}/franka_combinable_hw_plugin.xml"/>
  </export>
</package>
