<?xml version="1.0"?>
<package format="3">
  <name>franka_msgs</name>
  <version>0.8.0</version>
  <description>franka_msgs provides messages specific to Franka Emika research robots</description>
  <maintainer email="iliad@todo.todo">iliad</maintainer>
  <license>Apache 2.0</license>

  <url type="repository">https://github.com/suneelbelkhale/franka_ros2</url>
  <url type="bugtracker">https://github.com/suneelbelkhale/franka_ros2/issues</url>
  <author>Franka Emika GmbH</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
