<?xml version="1.0"?>
<package format="3">
  <name>franka_ros2</name>
  <version>0.8.0</version>
  <description>franka_ros is a metapackage for all Franka Emika ROS packages</description>
  <maintainer email="iliad@todo.todo">iliad</maintainer>
  <license>Apache 2.0</license>

  <url type="repository">https://github.com/suneelbelkhale/franka_ros2</url>
  <url type="bugtracker">https://github.com/suneelbelkhale/franka_ros2/issues</url>
  <author>Franka Emika GmbH</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>franka_gripper</exec_depend>
  <exec_depend>franka_hw</exec_depend>
  <exec_depend>franka_msgs</exec_depend>
  <!-- <exec_depend>franka_visualization</exec_depend> -->
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
